compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__deprecation_without_message.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 775
expression: "\n@deprecated()\npub fn main() -> Nil {\n  Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@deprecated()
pub fn main() -> Nil {
  Nil
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:1
  │
2 │ @deprecated()
  │ ^^^^^^^^^^^ A deprecation attribute must have a string message.
