compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__function_definition_angle_generics_error.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1961
expression: "fn id<T>(x: T) { x }"
snapshot_kind: text
---
----- SOURCE CODE
fn id<T>(x: T) { x }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:6
  │
1 │ fn id<T>(x: T) { x }
  │      ^ I was expecting `(` here.

Generic function type variables do not need to be predeclared like they
would be in some other languages, instead they are written with lowercase
names.

    fn example(argument: generic) -> generic

See: https://tour.gleam.run/functions/generic-functions/
